--- a/app/src/main/res/layout/dialog_input.xml
+++ b/app/src/main/res/layout/dialog_input.xml
@@ -19,7 +19,8 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="18sp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:labelFor="@+id/autoCompleteTextView1"/>
 
         <include layout="@layout/dialog_input_poke_picker"
             android:layout_height="wrap_content"
@@ -48,7 +49,8 @@
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:labelFor="@+id/etCp"/>
 
             <EditText
                 android:id="@+id/etCp"
@@ -79,7 +81,8 @@
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:labelFor="@+id/etHp"/>
 
             <EditText
                 android:id="@+id/etHp"
